<resources>

	<string name="app_name">Tasty meals</string>

	<!-- Common for error -->
	<string name="error_was_occurred">Error was occurred</string>
	<string name="check_your_internet_connection">Check your internet connection</string>
	<string name="no_items">No items</string>

	<!-- Test values -->
	<string name="test_link"><a href="http://www.google.com">link</a></string>

	<!-- Recipe details screen -->
	<string name="category">Category: </string>
	<string name="area">Area: </string>
	<string name="video">Video: </string>
	<string name="source">Source: </string>
	<string name="ingredients">Ingredients</string>

</resources>
